[GS2-288] allow reserving same product up to limit
